@@ -2,7 +2,7 @@
 	pr_comp.h
 	PROGS structures: This file is shared by Hexen II and HCC
 
-	$Id: pr_comp.h,v 1.4 2007-03-14 21:03:12 sezero Exp $
+	$Id$
 */
 
 #ifndef __PR_COMP_H
@@ -13,7 +13,8 @@ typedef int	string_t;
 
 typedef enum
 {
-	ev_void,
+	ev_bad = -1,
+	ev_void = 0,
 	ev_string,
 	ev_float,
 	ev_vector,
@@ -34,6 +35,8 @@ typedef enum
 #define	OFS_PARM6		22
 #define	OFS_PARM7		25
 #define	RESERVED_OFS	28
+
+#define	IMMEDIATE_NAME	"I+"		/* was "IMMEDIATE" in qcc */
 
 enum
 {
